--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -10,24 +10,26 @@
     />
 
     <link rel="stylesheet" href="css/icon-font.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
     <header class="header">
-      <div class="logo-box">
-        <img class="logo" src="img/logo-white.png" alt="Logo" />
+      <div class="header__logo-box">
+        <img class="header__logo" src="img/logo-white.png" alt="Logo" />
       </div>
 
-      <div class="text-box">
+      <div class="header__text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary-main">Outdoors</span>
-          <span class="heading-primary-sub">is where life happens</span>
+          <span class="heading-primary--main">Outdoors</span>
+          <span class="heading-primary--sub">is where life happens</span>
         </h1>
 
-        <a href="#" class="btn btn-white"> Discover more adventures </a>
+        <a href="#" class="btn btn--white btn--animated">
+          Discover more adventures
+        </a>
       </div>
     </header>
   </body>
